movenc: store codecs that dont provide a frame_size as audio_vbr=1

Fixes Ticket1240

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>